adding the version v1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="menuContainer">
         <div class="menu">
             <main>
-                <h1>Match Maker</h1>
+                <h1>Match Maker v1</h1>
                 <p>We will help you to select the best phone for your needs</p>
                 <hr>
                 <form id="survey-form">
